<resources>
    <string name="app_name">三川海洋监测</string>
    <string name="login">登录</string>
    <string name="company_name">广州三川控制系统工程设备有限公司</string>
    <string name="logon_mima">请输入密码</string>
    <string name="login_account">请输入账号</string>
    <string name="setting_par">参数配置</string>
    <string name="back">返回</string>
    <string name="query">查询</string>
    <string name="histroy_data">历史数据</string>
</resources>
