<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.suntrans.smartsea.activity.LoginActivity">
   <TextView
       android:textColor="@color/white"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textSize="40sp"
       android:layout_above="@+id/ll_login"
       android:layout_marginBottom="60dp"
       android:text="@string/app_name"/>
   <LinearLayout
       android:id="@+id/ll_login"
       android:layout_centerInParent="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <com.suntrans.smartsea.widget.EditView
          android:background="@color/white"
          android:hint="@string/login_account"
          android:layout_width="match_parent"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_height="50dp"
          android:drawableLeft="@mipmap/ic_user"
          android:id="@+id/account" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="30dp" />
      <com.suntrans.smartsea.widget.EditView
          android:id="@+id/password"
          android:background="@color/white"
          android:hint="@string/logon_mima"
          android:inputType="textPassword"
          android:layout_width="match_parent"
          android:drawableLeft="@mipmap/ic_mima"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_height="50dp" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="30dp" />
      <Button
          android:id="@+id/login"
          android:text="@string/login"
          android:textSize="19sp"
          android:textColor="@color/white"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:background="@drawable/bg_login"/>
   </LinearLayout>
   <TextView
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textColor="@color/white"
       android:textSize="20sp"
       android:layout_marginBottom="20dp"
       android:text="@string/company_name"/>
</RelativeLayout>
