<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:st="http://www.suntrans.net/"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:id="@+id/frame1">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="100dp"
            android:layout_height="match_parent">
            <ImageView
                android:paddingRight="-8dip"
                android:layout_height="35dip"
                android:layout_width="20dip"
                android:id="@+id/tx_edit"
                android:src="@mipmap/ic_back"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/layout_title"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/title_dimen"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/histroy_data"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:background="@drawable/bg_back"
            android:id="@+id/layout_alert">
            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="27dip"
                android:layout_height="27dip"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:background="@drawable/bg_back"
            android:id="@+id/layout_query">
            <TextView
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:gravity="center"
                android:scaleType="fitXY"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/right_title_dimen"
                android:text="@string/query"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="开始时间:"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:id="@+id/begin_time_ymd"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="2016-11-08"/>
            <TextView
                android:id="@+id/begin_time_hh"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="22"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="@dimen/text_size"
                android:text=":"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/begin_time_mm"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size"
                android:text="结束时间:"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:id="@+id/end_time_ymd"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="2016-11-08"/>
            <TextView
                android:id="@+id/end_time_hh"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="22"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="@dimen/text_size"
                android:text=":"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/end_time_mm"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:background="@drawable/rect_radio"
                android:text="00"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#1FBBA6">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_above="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        </com.github.mikephil.charting.charts.LineChart>
        <android.support.v7.widget.RecyclerView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerview"
            android:paddingTop="5dip"
            android:background="#1FBBA6"
            android:layout_alignParentBottom="true"
            >
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>
